@@ -57,6 +57,7 @@ December ? 2020 [Hróðvitnir]
     * Joystick buttons 2 and 3 are no longer mapped to Use/Cancel (like buttons 0
       and 1), so you can use them for other purposes
     * The slice editor now shows the root slice of a collection by default
+    * "trim string" now trims tabs and newlines too
 
   *** Bugfixes
     * "set opacity" (with opacity < 100%) didn't always turn on blending
